# logging_lib

./: CMakeLists.txt  README.md
apps/: logger_demo.cpp  stats_collector.cpp
include/logging/: logger.hpp
src/: logger.cpp  sinks.hpp
